# plClojure

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE  load.sh  test.sh
src/: BUILD.bazel  main.cpp  pl_clojure_handler.c
