load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "pl_clojure",
    srcs = ["main.cpp"],
    deps = [
        "@rules_jni//jni",
        "@rules_jni//jni:libjvm"
    ],
    copts = [
        "-Iexternal/rules_jni/include",
        "-Iexternal/rules_clojure/include"
    ],
    linkopts = [
        "-L/opt/homebrew/Cellar/openjdk/23.0.2/libexec/openjdk.jdk/Contents/Home/lib/server",
        "-ljvm"
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "pl_clojure_handler",
    srcs = ["pl_clojure_handler.c"],  # Changed from .cpp to .c
    deps = [
        "@rules_jni//jni",
        "@rules_jni//jni:libjvm",
        "@postgresql//:postgresql",
    ],
    copts = [
        "-fPIC",
        "-Iexternal/rules_jni/include",
        "-Iexternal/rules_clojure/include",
        "-Iexternal/postgresql/include",
        "-std=c11",  # Added C11 standard
    ],
    linkopts = [
        "-undefined", "dynamic_lookup",
        "-L/opt/homebrew/Cellar/openjdk/23.0.2/libexec/openjdk.jdk/Contents/Home/lib/server",
        "-ljvm",
        "-L/opt/homebrew/opt/postgresql@14/lib/postgresql@14",
        "-rpath", "/opt/homebrew/opt/postgresql@14/lib/postgresql@14",
        "-lpq",
        "-shared",
    ],
    linkshared = True,
    visibility = ["//visibility:public"],
)

